tests/tests/errors/30034-1.vb
'#compiler-message:30034-1.vb(7:24) : error BC30034: Bracketed identifier is missing closing ']'.
'#exit-code:1

Module Test

    Public Sub Main()
        Dim [Identifier As String
    end Sub
    
End Module